# codeyou-cohort-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  README.md  cohort_tracker_project_plan.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main.yml  pr-check.yml  release.yml  stale.yml
docs/: README.md  analytics-features.md  architecture.md  dashboard-guide.md  database.md  development.md  getting-started.md  openclass-api.md  roadmap.md  rust-basics.md  testing.md  why-rust.md
docs/planning/: cohort_tracker_project_plan.md
src/: api.rs  cli.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  openclass.rs  sync.rs  update.rs
src/db/: analytics.rs  mod.rs  queries.rs
src/lms/: mod.rs
src/lms/openclass/: auth.rs  fetch.rs  mod.rs  types.rs
src/sync/: engine.rs  mod.rs  types.rs
static/: README.md  capture-screenshots.mjs  index.html  jest.config.js  openclass-demo-mode.user.js  package.json
static/css/: styles.css
static/js/: api.js  app.js  state.js  utils.js
static/js/__tests__/: state.test.js  utils.test.js
tests/: config_tests.rs  db_tests.rs  integration_tests.rs  openclass_tests.rs  sync_tests.rs
