[package]
name = "cohort-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.27"
anyhow = "1.0"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
openssl = "0.10"
urlencoding = "2.1"
