[package]
name = "cohort-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "process", "io-util"] }
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.27"
anyhow = "1.0"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = "2.1"
axum = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = "0.4"
async-trait = "0.1"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.5"
